--- a/x/programs/rust/examples/nft/Cargo.toml
+++ b/x/programs/rust/examples/nft/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 wasmlanche_sdk = { version = "0.1.0", path = "../../wasmlanche_sdk" }
-serde = { version = "1.0.185", features = ["derive"] }
-serde_json = "1.0.69"
+serde_derive = "1.0.188"
+serde = "1.0.188"
